@@ -9,6 +9,8 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
 
+import org.bukkit.scoreboard.Scoreboard;
+
 import com.gmail.nossr50.mcMMO;
 import com.gmail.nossr50.config.Config;
 import com.gmail.nossr50.config.spout.SpoutConfig;
@@ -30,6 +32,7 @@ public class PlayerProfile {
     private HudType hudType;
     private MobHealthbarType mobHealthbarType;
     private McMMOHud spoutHud;
+    private Scoreboard statsScoreboard;
 
     /* Skill Data */
     private final Map<SkillType, Integer>   skills     = new HashMap<SkillType, Integer>();   // Skill & Level
@@ -107,6 +110,18 @@ public class PlayerProfile {
     }
 
     /*
+     * Scoreboards
+     */
+
+    public Scoreboard getStatsScoreboard() {
+        return statsScoreboard;
+    }
+
+    public void setStatsScoreboard(Scoreboard statsScoreboard) {
+        this.statsScoreboard = statsScoreboard;
+    }
+
+    /*
      * Cooldowns
      */
 
@@ -171,6 +186,7 @@ public class PlayerProfile {
 
     public void skillUp(SkillType skillType, int newValue) {
         skills.put(skillType, skills.get(skillType) + newValue);
+        
     }
 
     /**
